Fix video time moving to the next column
When the video title was too long the time moved to the next column.

--- a/version_control/Codurance_September2020/css/modules/fireside-chat-videos.css
+++ b/version_control/Codurance_September2020/css/modules/fireside-chat-videos.css
@@ -33,8 +33,12 @@
 
 {% call utils.medium_large_and_extra_large() %}
     .fireside-chat-videos {
-        columns: 2;
-        column-gap: 2em;
+        display: flex;
+        gap: 2em;
+    }
+
+    .fireside-chat-video {
+        flex-basis: 100%;
     }
 {% endcall %}
 
